--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -1,2 +1,56 @@
 # Data Modeling
 ---
+## History of Data Modeling
+### Edgar F. Codd
+> "A Relational model of data for large shared data banks" - CACM(1970)  
+- He proposed a mathematical model to handle data in an algebric way with a set of operators
+- It is called __RDM(Relational Data Model)__
+
+### Peter Chen
+> "The Entity-Relationship Moddel - Toward a unified view of data"(1976)  
+- He used __Table__
+- Table can describe everything in real world
+- More expressive power than RDM
+- Everything by means of __Entity Set__ and __Relationship__
+
+### James Rambaugh
+> "Object-Oriented Modeling and Design"(1990)  
+- Object-Oriented Language(객체 지향 언어)의 대표적 특징은, Encapsulation(캡슐화)
+  - 무슨 내용물인지 알 필요가 없이, 그냥 우리가 사용만 하면 된다.
+- Relational Model이 진화를 한 방식이 바로 Object-Oriented Model이다.
+- 결국 1999년에 UML로 통합된다.
+
+## What is Class Diagram?
+- It is Part of UML Diagram(richest notation of UML)
+- Describes
+  - Types of objects in system(e.g. 직업, 나이, 이름..)
+  - 위의 Objects들 간에 존재하는 다양한 통계적 관계에 대해 묘사한다.
+  - Graphical representation of a static view on declarative static elements
+- Essential elements of a UML Class Diagram
+  - Class
+  - Attributes
+  - Operations
+  - Relationships
+    - Associations
+    - Generalizations
+    - Dependancy
+    - Realization
+  - Constraint rules and Notes  
+![Example of UML](https://user-images.githubusercontent.com/71700079/132525374-8c80c5d6-869b-4f5d-8ec5-6d5f59f7f7f1.png)  
+
+- Classes?
+  - Class : Description of a set of objects having similar, 이름은 명사로 지어질 수 있다.
+    - Attributes
+    - Operations
+    - Relationships and Behavior
+  (e.g. Class | Window  
+        Attributes | size : Size, visibility : boolean  
+        Operations | display(), hide())
+ - Associations : Name and Role
+  - A semantic relationship between classes : To specify connections among their instances
+  - A structual relationship : To specify that objects of one class are connected to objects of second class(e.g. An Employee "work for" a Company)
+  - Association has a name
+    - To clarify it's meaning
+    - The name is represented as a label placed midway along the association line
+    - Usually a verb or a verb phrase
+  - A role is an end of an association where it connects to a class
