--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -55,7 +55,9 @@
     - Usually a verb or a verb phrase
   - A role is an end of an association where it connects to a class  
 ![Class Relationship](https://user-images.githubusercontent.com/71700079/133072772-c2e09aa0-a4af-4b0a-bc30-e4da24d29412.png)  
-
+  - Association은 위 그림과 같이 방향성을 가지는데, 위와 같은 관계를 단방향 연결이라고 한다.
+  - 쌍방향으로 만드려면 하나의 관계를 더 implement해야 한다.
+  - 자기 자신에게 돌아오는 화살표가 그려지는 경우가 있는데, 이는 재귀적 연관(Reflexive)라고 하며, 수업을 예로 들자면 선행 수업의 수 같은 것이다.
   - Notation of Cardinality(Multiplicity)
     - 하나 밖에 없다 : 1
     - 0이거나 더 많이 있다.(Unlimited) : * (0..*)
@@ -64,6 +66,7 @@
     - 구체적인 범위 : 2..4
     - 범위의 분리 : 2, 4..6, 8
     - Cardinality가 적혀있지 않으면 1..1이라고 볼 수 있다. 하지만? 애매모호하다.
+  
   - Association Class : 그냥 Class Relationship을 보면 Association에 대한 자세한 설명이 적혀있지 않아 알 수 없다. 따라서 아래와 같이 Association Class를 정의한다.  
   ![Association Class](https://user-images.githubusercontent.com/71700079/133073426-7b627d25-589b-4f25-9028-f0c2b45a1cc1.png)  
   
