--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -54,7 +54,7 @@
     - The name is represented as a label placed midway along the association line
     - Usually a verb or a verb phrase
   - A role is an end of an association where it connects to a class  
-![Class Relationship](https://user-images.githubusercontent.com/71700079/133072772-c2e09aa0-a4af-4b0a-bc30-e4da24d29412.png)  
+  ![Class Relationship](https://user-images.githubusercontent.com/71700079/133072772-c2e09aa0-a4af-4b0a-bc30-e4da24d29412.png)  
   - Association은 위 그림과 같이 방향성을 가지는데, 위와 같은 관계를 단방향 연결이라고 한다.
   - 쌍방향으로 만드려면 하나의 관계를 더 implement해야 한다.
   - 자기 자신에게 돌아오는 화살표가 그려지는 경우가 있는데, 이는 재귀적 연관(Reflexive)라고 하며, 수업을 예로 들자면 선행 수업의 수 같은 것이다.
@@ -70,4 +70,23 @@
   - Association Class : 그냥 Class Relationship을 보면 Association에 대한 자세한 설명이 적혀있지 않아 알 수 없다. 따라서 아래와 같이 Association Class를 정의한다.  
   ![Association Class](https://user-images.githubusercontent.com/71700079/133073426-7b627d25-589b-4f25-9028-f0c2b45a1cc1.png)  
   
-  - Aggregation : Association
+  - Aggregation : Association  
+    ![Aggregation](https://user-images.githubusercontent.com/71700079/133081767-5b502080-a8e5-41ca-b57b-0b340f5ac162.png)  
+    - Whole Class의 Cardinality를 적지 않아도 된다.
+    - 대개 1 to many로 구성된다.
+    - Whole Class의 Life Cycle은 Part Class의 Life cycle와 서로 영향 받지 않는다.
+    - 즉 Whole Class가 사라지더라도, Part Class는 소멸되지 않는다.
+  
+  - Composition(Strong Aggregation)  
+    ![Composition](https://user-images.githubusercontent.com/71700079/133081780-856d89f5-900d-42f9-96a7-43a3f6a01cf5.png)  
+    - 특수한 경우의 Aggregation 이다.
+    - 대개 1 to 1로 구성된다.
+    - 상위 클래스의 Cardinality를 굳이 적을 필요가 없다. why?) 1대1대응이니까.
+    - 상위 클래스가 죽으면, 하위 클래스 또한 소멸된다.
+  
+  - Generalization  
+    ![Generalization](https://user-images.githubusercontent.com/71700079/133081791-a8c77b1c-336f-43f4-b2f0-74f278bb38be.png)  
+    - "is kind of"의 관계를 갖는 Relation이다.
+    - 일반적인 상위 클래스에 대해서 모두 공통점을 갖는 하위 클래스들이 존재한다.
+    - 하위 클래스는 상위 클래스의 모든 속성(Attributes)를 물려받는다. 따라서 하위로 내려갈 수록 많은 속성을 갖는다.(Inheritance)
+    - 반대의 경우는 Specialization이라고 한다.
