--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -90,3 +90,19 @@
     - 일반적인 상위 클래스에 대해서 모두 공통점을 갖는 하위 클래스들이 존재한다.
     - 하위 클래스는 상위 클래스의 모든 속성(Attributes)를 물려받는다. 따라서 하위로 내려갈 수록 많은 속성을 갖는다.(Inheritance)
     - 반대의 경우는 Specialization이라고 한다.
+  
+  - Constraint
+  > UML Diagram으로 모든 의미론적(Semantic) 내용을 표현하는 것은 불가능하다.  
+  > 따라서 우리는 Constraint를 이용해서 더욱 더 풍성한 표현이 가능해진다.  
+    - Key Constraint(키 제약)
+      - Key?
+        - Key는 각 Object를 구분할 수 있는 한 개 또는 그 이상의 집합이 된다.
+        - 서로 다른 Object들은 같은 Key를 가질 수 없다.
+        - 객체를 구별하고 가장 명확하게 특징을 보여주는 Key를 우리는 PK(Primary Key, 기본키)라고 칭한다.
+        - 예를 들어, Employee 클래스가 있다고 가정하면 그 클래스의 PK 집합은 (name, address)라고 할 수 있을 것이다.
+    - Referential Integrity(참조 무결성)
+      - 참조 무결성이란, 다른 객체에 의해 참조되는 값은 무조건 DB 내에 존재해야만 한다는 규칙이다.
+      - 우리는 외래키(Foreign Key)를 이용해서 다른 객체의 PK(기본키)를 참조를 할 수 있도록 되어있는데, 외래키 참조 시에 객체가 존재하지 않는다면 오작동을 하게 된다.
+      - 따라서 우리는 참조 무결성 Constraint를 걸어서 이런 오류가 없게 해야한다.
+  
+  ## Sample Modeling : RFID
