--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -21,10 +21,10 @@
 - 결국 1999년에 UML로 통합된다.
 
 ## What is Class Diagram?
-- It is Part of UML Diagram(richest notation of UML)
+- It is Part of __UML Diagram(richest notation of UML)__
 - Describes
   - Types of objects in system(e.g. 직업, 나이, 이름..)
-  - 위의 Objects들 간에 존재하는 다양한 통계적 관계에 대해 묘사한다.
+  - 위의 Objects들 간에 존재하는 다양한 __통계적 관계__ 에 대해 묘사한다.
   - Graphical representation of a static view on declarative static elements
 - Essential elements of a UML Class Diagram
   - Class
@@ -73,7 +73,7 @@
   - Aggregation : Association  
     ![Aggregation](https://user-images.githubusercontent.com/71700079/133081767-5b502080-a8e5-41ca-b57b-0b340f5ac162.png)  
     - Whole Class의 Cardinality를 적지 않아도 된다.
-    - 대개 1 to many로 구성된다.
+    - 대개 __1 to many__ 로 구성된다.
     - Whole Class의 Life Cycle은 Part Class의 Life cycle와 서로 영향 받지 않는다.
     - 즉 Whole Class가 사라지더라도, Part Class는 소멸되지 않는다.
   
@@ -98,7 +98,7 @@
       - Key?
         - Key는 각 Object를 구분할 수 있는 한 개 또는 그 이상의 집합이 된다.
         - 서로 다른 Object들은 같은 Key를 가질 수 없다.
-        - 객체를 구별하고 가장 명확하게 특징을 보여주는 Key를 우리는 PK(Primary Key, 기본키)라고 칭한다.
+        - 객체를 구별하고 가장 명확하게 특징을 보여주는 Key를 우리는 __PK(Primary Key, 기본키)__ 라고 칭한다.
         - 예를 들어, Employee 클래스가 있다고 가정하면 그 클래스의 PK 집합은 (name, address)라고 할 수 있을 것이다.
     - Referential Integrity(참조 무결성)
       - 참조 무결성이란, 다른 객체에 의해 참조되는 값은 무조건 DB 내에 존재해야만 한다는 규칙이다.
