--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -54,10 +54,15 @@
     - The name is represented as a label placed midway along the association line
     - Usually a verb or a verb phrase
   - A role is an end of an association where it connects to a class  
-  ![Class Relationship](https://user-images.githubusercontent.com/71700079/133072772-c2e09aa0-a4af-4b0a-bc30-e4da24d29412.png)  
-  - Association은 위 그림과 같이 방향성을 가지는데, 위와 같은 관계를 단방향 연결이라고 한다.
-  - 쌍방향으로 만드려면 하나의 관계를 더 implement해야 한다.
-  - 자기 자신에게 돌아오는 화살표가 그려지는 경우가 있는데, 이는 재귀적 연관(Reflexive)라고 하며, 수업을 예로 들자면 선행 수업의 수 같은 것이다.
+  ![Association](https://user-images.githubusercontent.com/71700079/134892981-9d45578d-7234-4d67-bb84-2f47d9861be9.png)
+    - 가운데 적힌 Works for이 __Association name__ 이다.
+    - 그리고 양 Association의 양 끝단에 적힌 1..* 이나 1..1이 Cardinality(Mulitplicity)이다.
+    - Class의 상단에는 Role을 기재할 수 있다.
+    - 이를 우리는 __Table Structure__ 이라고 칭할 수 있다.
+  - 자기 자신에게 돌아오는 화살표가 그려지는 경우가 있는데, 이는 재귀적 연관(Reflexive)라고 하며, 수업을 예로 들자면 선행 수업의 수 같은 것이다.  
+  ![Reflexive](https://user-images.githubusercontent.com/71700079/134893931-b16efae8-af02-4340-a293-830bd3b9e7a9.png)
+    - 위 그림과 같이 Reflexive를 표현할 수 있다.
+    - 그리고 위와 같이 Association이 검은 화살표로 표기된 경우, Uni directional 즉 단방향 관계임을 표기한다.
   - Notation of Cardinality(Multiplicity)
     - 하나 밖에 없다 : 1
     - 0이거나 더 많이 있다.(Unlimited) : * (0..*)
