--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -3,12 +3,13 @@
 ## History of Data Modeling
 ### Edgar F. Codd
 > "A Relational model of data for large shared data banks" - CACM(1970)  
-- He proposed a mathematical model to handle data in an algebric way with a set of operators
+- He proposed a mathematical model to handle data in an algebric(관계 대수) way with a set of operators
 - It is called __RDM(Relational Data Model)__
 
 ### Peter Chen
 > "The Entity-Relationship Moddel - Toward a unified view of data"(1976)  
 - He used __Table__
+- E-R Model의 시초
 - Table can describe everything in real world
 - More expressive power than RDM
 - Everything by means of __Entity Set__ and __Relationship__
@@ -17,7 +18,7 @@
 > "Object-Oriented Modeling and Design"(1990)  
 - Object-Oriented Language(객체 지향 언어)의 대표적 특징은, Encapsulation(캡슐화)
   - 무슨 내용물인지 알 필요가 없이, 그냥 우리가 사용만 하면 된다.
-- Relational Model이 진화를 한 방식이 바로 Object-Oriented Model이다.
+- OMT(Object-oriented Modeling and Design)가 진화를 한 방식이 바로 Object-Oriented Model이다.
 - 결국 1999년에 UML로 통합된다.
 
 ## What is Class Diagram?
@@ -62,7 +63,7 @@
   - 자기 자신에게 돌아오는 화살표가 그려지는 경우가 있는데, 이는 재귀적 연관(Reflexive)라고 하며, 수업을 예로 들자면 선행 수업의 수 같은 것이다.  
   ![Reflexive](https://user-images.githubusercontent.com/71700079/134893931-b16efae8-af02-4340-a293-830bd3b9e7a9.png)
     - 위 그림과 같이 Reflexive를 표현할 수 있다.
-    - 그리고 위와 같이 Association이 검은 화살표로 표기된 경우, Uni directional 즉 단방향 관계임을 표기한다.
+    - 그리고 위와 같이 Association이 검은 화살표로 표기된 경우, Uni directional 즉 단방향 관계임을 표기하며, 방향성을 가진다.
   - Notation of Cardinality(Multiplicity)
     - 하나 밖에 없다 : 1
     - 0이거나 더 많이 있다.(Unlimited) : * (0..*)
@@ -72,28 +73,32 @@
     - 범위의 분리 : 2, 4..6, 8
     - Cardinality가 적혀있지 않으면 1..1이라고 볼 수 있다. 하지만? 애매모호하다.
   
-  - Association Class : 그냥 Class Relationship을 보면 Association에 대한 자세한 설명이 적혀있지 않아 알 수 없다. 따라서 아래와 같이 Association Class를 정의한다.  
-  ![Association Class](https://user-images.githubusercontent.com/71700079/133073426-7b627d25-589b-4f25-9028-f0c2b45a1cc1.png)  
-  
+  - Association Class : 그냥 Class Relationship을 보면 Association에 대한 자세한 설명이 적혀있지 않아 알 수 없다.  
+                        따라서 아래와 같이 Association Class를 정의한다.  
+  ![AssClass](https://user-images.githubusercontent.com/71700079/134896144-1f740816-3ee7-4e7d-847d-2b8e8e4279af.png)
+
 - Aggregation : Association  
-  ![Aggregation](https://user-images.githubusercontent.com/71700079/133081767-5b502080-a8e5-41ca-b57b-0b340f5ac162.png)  
-  - Whole Class의 Cardinality를 적지 않아도 된다.
+  ![Agg](https://user-images.githubusercontent.com/71700079/134896682-3d5e215f-a6eb-4ad1-8468-91cc1315cfef.png)
+  - 가장 위에 존재하는 상위 클래스를 __Whole Class__ 라고 칭한다.
+  - 이는 "is a part-part of" 관계를 만족한다.
   - 대개 __1 to many__ 로 구성된다.
+  - __Whole Class__ 는 아래 Part들의 Cardinality를 모두 가질 수 있기 때문에 적지 않지만, 각 Part들에는 반드시 적어주어야 한다.
   - Whole Class의 Life Cycle은 Part Class의 Life cycle와 서로 영향 받지 않는다.
   - 즉 Whole Class가 사라지더라도, Part Class는 소멸되지 않는다.
   
 - Composition(Strong Aggregation)  
-  ![Composition](https://user-images.githubusercontent.com/71700079/133081780-856d89f5-900d-42f9-96a7-43a3f6a01cf5.png)  
+   ![Compo](https://user-images.githubusercontent.com/71700079/134897249-02cc621d-ff2f-47b2-ac53-3e513664dacb.png)
   - 특수한 경우의 Aggregation 이다.
-  - 대개 1 to 1로 구성된다.
-  - 상위 클래스의 Cardinality를 굳이 적을 필요가 없다. why?) 1대1대응이니까.
+  - Whole Class는 반드시 Part Class를 단 1개만 소유하여야한다.
+  - 상위 클래스의 Cardinality를 굳이 적을 필요가 없다. why?) Whole Class의 Cardinality는 반드시 0..1 이어야한다.
   - 상위 클래스가 죽으면, 하위 클래스 또한 소멸된다.
   
 - Generalization  
-  ![Generalization](https://user-images.githubusercontent.com/71700079/133081791-a8c77b1c-336f-43f4-b2f0-74f278bb38be.png)  
+  ![gene](https://user-images.githubusercontent.com/71700079/134897470-360565c8-e99b-4faa-939a-c7e87226411e.png)
   - "is kind of"의 관계를 갖는 Relation이다.
   - 일반적인 상위 클래스에 대해서 모두 공통점을 갖는 하위 클래스들이 존재한다.
-  - 하위 클래스는 상위 클래스의 모든 속성(Attributes)를 물려받는다. 따라서 하위로 내려갈 수록 많은 속성을 갖는다.(Inheritance)
+  - 하위 클래스는 상위 클래스의 모든 속성(Attributes)를 물려받는다. 따라서 하위로 내려갈 수록 많은 속성을 갖는다.
+    - 이를 우리는 Inheritance, 상속이라고 한다.
   - 반대의 경우는 Specialization이라고 한다.
   
 - Constraint
@@ -107,7 +112,18 @@
       - 예를 들어, Employee 클래스가 있다고 가정하면 그 클래스의 PK 집합은 (name, address)라고 할 수 있을 것이다.
   - Referential Integrity(참조 무결성)
     - 참조 무결성이란, 다른 객체에 의해 참조되는 값은 무조건 DB 내에 존재해야만 한다는 규칙이다.
-    - 우리는 외래키(Foreign Key)를 이용해서 다른 객체의 PK(기본키)를 참조를 할 수 있도록 되어있는데, 외래키 참조 시에 객체가 존재하지 않는다면 오작동을 하게 된다.
+    - 우리는 외래키(Foreign Key)를 이용해서 다른 객체의 PK(기본키)를 참조를 할 수 있도록 되어있는데, 외래키 참조 시에 객체가 존재하지 않는다면 오작동을 하게 된다.  
+                                                                                               ==> __Like Dangling Pointer in C
     - 따라서 우리는 참조 무결성 Constraint를 걸어서 이런 오류가 없게 해야한다.
   
 ## Sample Modeling : RFID
+
+- Weak Entity Set
+![weaken](https://user-images.githubusercontent.com/71700079/134898870-3fdbda9b-3802-4df2-a787-d38033cbd283.png)
+  - 위와 같은 예시가 있다고 생각하자. Football Team에 대한 Aggregation의 구성이다.
+  - 이 때, 우리는 Player이 가지고 있는 (name, back number) 이런 Attributes Set만으로 필요한 Primary Key를 만들 수 있는가?
+  - 불가능하다. 따라서 Football Team에 있는 Team name의 지원을 받아서 Primary Key인 (team name, back number)을 만들어내야 한다.
+  - 이렇게 Support Class(Football team)의 지원을 받아야만 만들어지는 Class를 우리는 __Weak Entity Sets__ 라고 칭한다.
+    - Support Class의 지원을 받을 때에는 반드시 Refential integrity가 지켜져야 할 것이다.
+  - 그리고 Weak Entity Sets와 Support Class는 반드시 __1 to many__ 구성이 되어야 한다. __1 to 1__ 관계일 시, Weak entity set이 될 수 없다.
+
