--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -114,16 +114,18 @@
     - 참조 무결성이란, 다른 객체에 의해 참조되는 값은 무조건 DB 내에 존재해야만 한다는 규칙이다.
     - 우리는 외래키(Foreign Key)를 이용해서 다른 객체의 PK(기본키)를 참조를 할 수 있도록 되어있는데, 외래키 참조 시에 객체가 존재하지 않는다면 오작동을 하게 된다.  
                                                                                                ==> __Like Dangling Pointer in C
-    - 따라서 우리는 참조 무결성 Constraint를 걸어서 이런 오류가 없게 해야한다.
+    - 따라서 우리는 참조 무결성 Constraint를 걸어서 이런 오류가 없게 해야한다.  
   
-## Sample Modeling : RFID
-
-- Weak Entity Set
+- Weak Entity Set  
 ![weaken](https://user-images.githubusercontent.com/71700079/134898870-3fdbda9b-3802-4df2-a787-d38033cbd283.png)
   - 위와 같은 예시가 있다고 생각하자. Football Team에 대한 Aggregation의 구성이다.
   - 이 때, 우리는 Player이 가지고 있는 (name, back number) 이런 Attributes Set만으로 필요한 Primary Key를 만들 수 있는가?
   - 불가능하다. 따라서 Football Team에 있는 Team name의 지원을 받아서 Primary Key인 (team name, back number)을 만들어내야 한다.
   - 이렇게 Support Class(Football team)의 지원을 받아야만 만들어지는 Class를 우리는 __Weak Entity Sets__ 라고 칭한다.
     - Support Class의 지원을 받을 때에는 반드시 Refential integrity가 지켜져야 할 것이다.
-  - 그리고 Weak Entity Sets와 Support Class는 반드시 __1 to many__ 구성이 되어야 한다. __1 to 1__ 관계일 시, Weak entity set이 될 수 없다.
+  - 그리고 Weak Entity Sets와 Support Class는 반드시 __1 to many__ 구성이 되어야 한다. __1 to 1__ 관계일 시, Weak entity set이 될 수 없다.  
+ 
+## Sample Modeling : RFID  
+> Sample Model of University  
 
+## E-R Model(Entity-Relationship)
