--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -129,3 +129,16 @@
 > Sample Model of University  
 
 ## E-R Model(Entity-Relationship)
+> E-R Model(Entity-Relationship)은 앞서 DB의 역사에 대해 설명할 때, Peter Chen이 만들었던 OMT의 시초가 되는 모델이다.  
+> UML의 탄생에 큰 기여를 한 만큼 그와 형태는 유사하며, 아래와 같은 형태를 가진다.  
+![E-R](https://user-images.githubusercontent.com/71700079/134900226-0fddae2b-78ed-42ee-a43d-03c1a3af1bfd.png)  
+
+- Content of E-R Model
+![E-RR](https://user-images.githubusercontent.com/71700079/134900351-578d3c12-8d9d-47b5-b2ef-308b1c61378a.png)  
+  - UML Diagram과는 위의 사진과 같은 대응 관계를 가진다.
+
+- is_a relationship in E-R
+- Composition in E-R
+- Differences from UML Class Diagram
+  - Cardinality
+  - Multi-way Relationship
