--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -39,10 +39,39 @@
 
 ## Schema definition in SQL
 - SQL
-- Schema Definition in SQL
+  - Declarative Language for RDB
+  - DDL(Data Definition Language) : Schema Definition
+    - Table
+    - View(External Layer of DB)
+  - DML(Data Manipulation Language) : Querying
+- Schema Definition in SQL(Example)
+```SQL
+CREATE TABLE Movies(
+  title CHAR(100),
+  year INT,
+  length INT,
+  genre CHAR(10),
+  studioName CHAR(20),
+  producerC# INT,
+  PRIMARY KEY(title, year)
+)
+```
 - Modification
 ```SQL
 DROP TABLE movies;
 ALTER TABLE Movies ADD address CHAR(100);
 ALTER TABLE Movies DROP producerC#;
 ```
+- Default Values and Keys
+
+## Relational Algebra
+- Algebra : Set(Operands) + Operators
+- In Relational Algebra
+  - Operands : Relation(Table)
+  - Operators : Relation Operators
+    - Set operators : Union, Intersection, Difference
+    - Selection : 행을 반환하는 연산자.
+      - Example : 3.5 학점 이상의 Student만 반환을 하고 싶은 경우, σscore > 3.5(Student) 와 같이 표기한다.
+    - Projection
+    - Join
+    - Aggregate
