--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -15,7 +15,12 @@
   - Sequence of make schema
     1. Make Attributes
     2. Which attribute will use as KEY?
-- Example of Table
+- Example of Table  
+Beers  
+| Name | Manufacturer |
+|:---:|:---:|
+|Hite|Jinro| 
+|Cass|OB|
 
 ## Relation Schema
 - Relation Schema
