--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -16,10 +16,12 @@
     1. Make Attributes
     2. Which attribute will use as KEY?
 - Example of Table
-| Name | Manufacturer |
-|:---:|:---:|
-|Hite|Jinro|
-|Cass|OB|
+| URL | 결과 | 이유 |
+|:---:|:---:|:---:|
+|https://same-origin.com/index.html|Same origin|Path만 다르다.| 
+|https://dreamhack.io/|Cross origin|Host가 다르다.|
+|http://same-origin.com/|Cross origin|Scheme(Protocol)이 다르다.|
+|http://same-origin.com:7777|Cross origin|Port가 다르다.|  
 
 ## Relation Schema
 - Relation Schema
