--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -16,7 +16,7 @@
     1. Make Attributes
     2. Which attribute will use as KEY?
 - Example of Table  
-
+![DBDBDB](https://user-images.githubusercontent.com/71700079/135829543-d445c02e-8234-454e-b547-8c9e2318b6ba.png)  
 ## Relation Schema
 - Relation Schema
   - Relation name
@@ -53,7 +53,7 @@ CREATE TABLE Movies(
   genre CHAR(10),
   studioName CHAR(20),
   producerC# INT,
-  PRIMARY KEY(title, year)
+  PRIMARY KEY(title, year) -- movie# INT PRIMARY KEY, 이렇게도 Primary key를 선언할 수 있다.
 )
 ```
 - Modification
