--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -137,8 +137,12 @@
 ![E-RR](https://user-images.githubusercontent.com/71700079/134900351-578d3c12-8d9d-47b5-b2ef-308b1c61378a.png)  
   - UML Diagram과는 위의 사진과 같은 대응 관계를 가진다.
 
-- is_a relationship in E-R
+- is_a relationship in E-R  
+![봉쿠레](https://user-images.githubusercontent.com/71700079/135837555-78bbcc76-9905-4fcf-81d8-c032123322e3.PNG)  
+
 - Composition in E-R
+![compo](https://user-images.githubusercontent.com/71700079/135837564-e22a5336-60aa-4060-af31-3dd465695ef2.PNG)  
+
 - Differences from UML Class Diagram
   - Cardinality
   - Multi-way Relationship
