--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -138,7 +138,7 @@
 
   - UML Diagram과는 위의 사진과 같은 대응 관계를 가진다.
 
-- is_a relationship in E-R  
+- is_kind_a relationship in E-R  
 ![봉쿠레](https://user-images.githubusercontent.com/71700079/135837555-78bbcc76-9905-4fcf-81d8-c032123322e3.PNG)  
 
 - Composition in E-R  
