--- a/1.Modeling.md
+++ b/1.Modeling.md
@@ -146,4 +146,9 @@
 
 - Differences from UML Class Diagram
   - Cardinality
-  - Multi-way Relationship
+  ![캡처](https://user-images.githubusercontent.com/71700079/135839626-e2c303c4-0c3b-4625-89b8-7bb577d31b93.PNG)  
+    - UML Class diagram과는 Cardinality의 표현 방식이 다르다.
+  - Multi-way Relationship  
+  ![qwd](https://user-images.githubusercontent.com/71700079/135839808-acf455d7-054c-47a4-bdb7-33b0309cc179.PNG)  
+    - UML Class diagram은 여러 Class에 다중으로 Association 연결이 불가능하지만, E-R Model은 가능하다.
+    - 물론 UML Class diagram도 Association Class를 선언하면 가능하긴 하겠지만 E-R Model이 훨씬 편안하다.
