--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -71,6 +71,10 @@ ALTER TABLE Movies DROP producerC#;
   - Operators : Relation Operators
     - Set operators : Union, Intersection, Difference
     - Selection : 행을 반환하는 연산자.
-      - Example : 3.5 학점 이상의 Student만 반환을 하고 싶은 경우, σscore > 3.5(Student) 와 같이 표기한다.
-    - Projection
+      - Example : 3.5 학점 이상의 Student만 반환을 하고 싶은 경우,  
+        ![select](https://user-images.githubusercontent.com/71700079/137159316-591c05e2-4f04-4d2e-a11b-36e2114f754d.PNG)
+      - 위와 같이 표기한다.
+    - Projection : 열을 반환하는 연산자.
+      - Example : 3.5 학점 이상의 Student들의 이름만 반환을 하고 싶은 경우,
+        ![projection](https://user-images.githubusercontent.com/71700079/137159403-ba76abdd-1a5e-49fe-9ff0-60bffe7bd44b.PNG)
     - Join
