--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -70,10 +70,15 @@ ALTER TABLE Movies DROP producerC#;
   - Operands : Relation(Table)
   - Operators : Relation Operators
     - Set operators : Union, Intersection, Difference
-    - Selection : 행을 반환하는 연산자.
+    - Selection : 행을 반환하는 연산자. (Closed)
       - Example : 3.5 학점 이상의 Student만 반환을 하고 싶은 경우, 아래와 같이 표기한다.  
         ![select](https://user-images.githubusercontent.com/71700079/137159316-591c05e2-4f04-4d2e-a11b-36e2114f754d.PNG)
-    - Projection : 열을 반환하는 연산자.
+    - Projection : 열을 반환하는 연산자. (Not Closed)
       - Example : 3.5 학점 이상의 Student들의 이름만 반환을 하고 싶은 경우, 아래와 같이 표기한다.  
         ![projection](https://user-images.githubusercontent.com/71700079/137159403-ba76abdd-1a5e-49fe-9ff0-60bffe7bd44b.PNG)
-    - Join
+    - Join : 조건에 맞는 두 테이블을 Cartesian Product 시켜주는 연산자. (Not Closed)
+      - Cartesian Product : 두 관계 테이블 R1, R2가 있을 때, 모든 원소들의 쌍을 또 하나의 Table로 표현하는 것.
+      - Example : Student(StudentName, AdvisorProfessorID, Department, Score) / Professor(ProfessorID, Department) 가 있을 때, 아래와 같이 표기한다.  
+        ![Join](https://user-images.githubusercontent.com/71700079/137160394-6f797e84-41d7-4b71-86b4-0a904498a678.PNG)  
+        ![Cartesian](https://user-images.githubusercontent.com/71700079/137160466-5620750a-68f2-4660-915b-88e478f9f8c1.PNG)  
+
