--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -81,4 +81,6 @@ ALTER TABLE Movies DROP producerC#;
       - Example : __Student(StudentName, AdvisorProfessorID, Department, Score) / Professor(ProfessorID, Department)__ 가 있을 때, 아래와 같이 표기한다.  
         ![Join](https://user-images.githubusercontent.com/71700079/137160394-6f797e84-41d7-4b71-86b4-0a904498a678.PNG)  
         ![Cartesian](https://user-images.githubusercontent.com/71700079/137160466-5620750a-68f2-4660-915b-88e478f9f8c1.PNG)  
+      - Natural Join : Join 연산자의 조건이 __Equal__ 일 때, __Natural Join__ 이라고 하고, Join 조건이 생략 가능하다.
+      - Theta Join : Equal을 제외한 나머지 __Boolean Condition__ 에 대해서는 조건을 표기를 해야하며, Theta join이라고 한다.
 
