--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -84,5 +84,11 @@ ALTER TABLE Movies DROP producerC#;
       - Natural Join : Join 연산자의 조건이 __Equal__ 일 때, __Natural Join__ 이라고 하고, Join 조건이 생략 가능하다.
       - Theta Join : Equal을 제외한 나머지 __Boolean Condition__ 에 대해서는 조건을 표기를 해야하며, Theta join이라고 한다.
       - Join Example  
-        ![NaturalJoin](https://user-images.githubusercontent.com/71700079/137161368-27c9fa35-54fa-4e71-80fc-c7aaa1f242b9.PNG)
+        ![NaturalJoin](https://user-images.githubusercontent.com/71700079/137161368-27c9fa35-54fa-4e71-80fc-c7aaa1f242b9.PNG)  
+      - Join Operator Sequence : 아래와 같은 연산자 우선순위를 갖는다.  
+        ![JoinExample](https://user-images.githubusercontent.com/71700079/137161585-d9a74530-6a17-46ec-a8a6-645b31869111.PNG)  
+        ![캡처](https://user-images.githubusercontent.com/71700079/137161655-d18ec622-5228-486c-a1bd-3ee8e4252697.PNG)  
+        ![캡처2](https://user-images.githubusercontent.com/71700079/137161680-939500cb-dc72-4650-8557-136e608e75fe.PNG)
+
+
 
