--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -88,7 +88,10 @@ ALTER TABLE Movies DROP producerC#;
       - Join Operator Sequence : 아래와 같은 연산자 우선순위를 갖는다.  
         ![JoinExample](https://user-images.githubusercontent.com/71700079/137161585-d9a74530-6a17-46ec-a8a6-645b31869111.PNG)  
         ![캡처](https://user-images.githubusercontent.com/71700079/137161655-d18ec622-5228-486c-a1bd-3ee8e4252697.PNG)
-        ![캡처2](https://user-images.githubusercontent.com/71700079/137161680-939500cb-dc72-4650-8557-136e608e75fe.PNG)
+        ![캡처2](https://user-images.githubusercontent.com/71700079/137161680-939500cb-dc72-4650-8557-136e608e75fe.PNG)  
+      - Join Operator to Set operator : 아래의 두 식은 같은 관계식이다.  
+        ![DDD](https://user-images.githubusercontent.com/71700079/137162067-da9f1e0d-043f-438a-a9ac-28c874ce22e4.PNG)  
+
 
 
 
