Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -24,8 +24,10 @@
   - 하지만 Bag에서의 Union(합집합) 연산은 중복을 허락하기 때문에, Idempotent가 없다. (e.g.  B UNION B = {B, B})
 
 ### Extended Algebra
-- Delta
-- Tower
-- Extended Projection
-- Gamma
-- OUTERJOIN
+- Delta : Bags에서 Duplications를 제거한다.
+- Tower : Bags의 Tuple들을 정렬한다. ==> Sorting의 결과는 List로 나온다.(Why? Set과 Bag은 순서가 없다.)
+- Extended Projection : 
+- Gamma : Grouping and Aggregation
+  - Aggregation : Relational Algebra의 Operator은 아니지만, (e.g. SUM, AVG, COUNT, MIN, and MAX)
+  - Grouping : 
+- OUTERJOIN : __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.
