--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -29,5 +29,12 @@
 - Extended Projection : 
 - Gamma : Grouping and Aggregation
   - Aggregation : Relational Algebra의 Operator은 아니지만, (e.g. SUM, AVG, COUNT, MIN, and MAX)
-  - Grouping : 
+  - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
+    - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
+    - Example : StarsIn(title, year, starName)
+      - R1 := Gamma(starName, MIN(year) => minYear, Count(title) => ctTitle)(StarsIn)  
+      - R2 := SELCT ctTitle >= 3(R1)
+      - R3 := PROJECT minYear(R2)  
+      ![qwd](https://user-images.githubusercontent.com/71700079/138421093-6ce66357-9532-4198-979a-38a538116525.PNG)
+
 - OUTERJOIN : __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.
