Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -24,12 +24,13 @@
   - 하지만 Bag에서의 Union(합집합) 연산은 중복을 허락하기 때문에, Idempotent가 없다. (e.g.  B UNION B = {B, B})
 
 ### Extended Algebra
-- Delta : Bags에서 Duplications를 제거한다.
+- Delta : Bags에서 Duplications를 제거한다. 이 연산자는 Grouping에 속하며, 특수한 Grouping이라고 볼 수 있다.
 - Tower : Bags의 Tuple들을 정렬한다. ==> Sorting의 결과는 List로 나온다.(Why? Set과 Bag은 순서가 없다.)
 - Extended Projection : 
 - Gamma : Grouping and Aggregation
-  - Aggregation : Relational Algebra의 Operator은 아니지만, (e.g. SUM, AVG, COUNT, MIN, and MAX)
+  - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 값들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
+    - 많은 Constraints들을 걸어서 새로운 Gropu으로 만드는 연산자.
     - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
     - Example : StarsIn(title, year, starName)
       - R1 := Gamma(starName, MIN(year) => minYear, Count(title) => ctTitle)(StarsIn)  
@@ -37,4 +38,6 @@
       - R3 := PROJECT minYear(R2)  
       ![qwd](https://user-images.githubusercontent.com/71700079/138421093-6ce66357-9532-4198-979a-38a538116525.PNG)
 
-- OUTERJOIN : __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.
+- OUTERJOIN : __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.  
+![qwd](https://user-images.githubusercontent.com/71700079/138422177-c86abcd9-b4d1-4fa8-8c03-fb98de429eba.PNG)
+
