Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -38,6 +38,7 @@
       - R3 := PROJECT minYear(R2)  
       ![qwd](https://user-images.githubusercontent.com/71700079/138421093-6ce66357-9532-4198-979a-38a538116525.PNG)
 
-- OUTERJOIN : __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.  
+- OUTERJOIN : 아래와 같이 __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.  
+
 ![qwd](https://user-images.githubusercontent.com/71700079/138422177-c86abcd9-b4d1-4fa8-8c03-fb98de429eba.PNG)
 
