Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -30,7 +30,7 @@
 - Gamma : Grouping and Aggregation
   - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 값들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
-    - 많은 Constraints들을 걸어서 새로운 Gropu으로 만드는 연산자.
+    - 많은 Constraints들을 걸어서 새로운 Grou으로 만드는 연산자.
     - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
     - Example : StarsIn(title, year, starName)
       - R1 := Gamma(starName, MIN(year) => minYear, Count(title) => ctTitle)(StarsIn)  
