Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -6,16 +6,17 @@
 - Example : {1,2,1,3}, {1,1,2}
 
 ### Why we use bag?
-> Database를 다루는 데에 매우 효율적으로 사용된다.  
+> Set보다 Tuple의 갯수가 더 많아서, 속도가 빠르고(중복 체크 X) 효율적인 구현에 유리한 듯 보인다.  
+> 하지만 Union 연산은 Set이 Bag보다 빠르다.  
 
 ### Operations on Bags
 - Selection : Set에 적용되는 Selection과 동일하다.
 - Projection : Set에서는 Duplication을 삭제하면서 Projection 하지만, Bag은 Duplication을 지우지 않는다.
 - Products and joins : Set과 동일하게 R1 X R2, R1 JOIN R2 이 적용된다. 중복이 있더라도, 결과에는 영향이 없다.  
 ![캡처](https://user-images.githubusercontent.com/71700079/138302285-2c691ce4-fbce-4b2d-ab84-d471586b1569.PNG)  
-- Union : 합집합이다. (e.g. {1,2,1} U {1,1,2,3,1} = {1,1,1,1,1,2,2,3}
-- Intersection : 교집합이다. (e.g. {1,2,1} Inter {1,2,3} = {1,2}
-- Difference : 차집합이다. (e.g. {1,2,1} - {1,2,3} = {1}
+- Union : 합집합이다. (e.g. {1,2,1} U {1,1,2,3,1} = {1,1,1,1,1,2,2,3} ==> 중복에 대해 검사가 없기 때문에, 결과 Relation에 중복이 발생한다.
+- Intersection : 교집합이다. (e.g. {1,2,1} Inter {1,2,3} = {1,2} ==> Set과 같은 결과를 보인다.
+- Difference : 차집합이다. (e.g. {1,2,1} - {1,2,3} = {1} ==> Set과 같은 결과를 보인다.
 
 ### Beware!
 > Bag에서 작용하는 대수적 법칙과 Set에서 작용하는 대수적 법칙은 다를 수도 있다!  
@@ -25,10 +26,14 @@
 
 ### Extended Algebra
 - Delta : Bags에서 Duplications를 제거한다. 이 연산자는 Grouping에 속하며, 특수한 Grouping이라고 볼 수 있다.
-- Tower : Bags의 Tuple들을 정렬한다. ==> Sorting의 결과는 List로 나온다.(Why? Set과 Bag은 순서가 없다.)
-- Extended Projection : 
+- Tow(L) : L자리의 Column을 정렬한다. ==> Sorting의 결과는 List로 나온다.(Why? Set과 Bag은 순서가 없다.) ==> Final Step 연산!
+  - L이 하나의 Column 일 때 : 그냥 정렬한다. 같은 값이 있다면 임의배치.
+  - L의 다수의 Column 일 때 : 앞의 Column으로 먼저 정렬을 한 뒤, 같은 값이 있다면 2순위의 Column 순서에 맞게 정렬한다.
+- Extended Projection : 원래의 Projection과 유사하지만, Attribute list L에 특성 연산이나 요소들을 기재하여 좀 더 구체적인 추출이 가능하다.
+  - X => Y 표현 : x와 y는 둘 다 Column Name, X의 이름을 Y로 Renaming한다. 결과 Schema에도 Y로 표기된다.
+  - E => z 표현, E는 Expression(Column, 상수, 산수, 연산자) z는 E의 연산 결과를 저장하는 Column의 이름이다.
 - Gamma : Grouping and Aggregation
-  - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 값들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
+  - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 열들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
     - 많은 Constraints들을 걸어서 새로운 Grou으로 만드는 연산자.
     - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
