--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -50,7 +50,7 @@ CREATE TABLE Movies(
   title CHAR(100),
   year INT,
   length INT,
-  genre CHAR(10),
+  genre CHAR(10) DEFAULT UNKNOWN,
   studioName CHAR(20),
   producerC# INT,
   PRIMARY KEY(title, year) -- movie# INT PRIMARY KEY, 이렇게도 Primary key를 선언할 수 있다.
