--- a/2.Relational Model.md
+++ b/2.Relational Model.md
@@ -92,6 +92,52 @@ ALTER TABLE Movies DROP producerC#;
       - Join Operator to Set operator : 아래의 두 식은 같은 관계식이다.  
         ![DDD](https://user-images.githubusercontent.com/71700079/137162067-da9f1e0d-043f-438a-a9ac-28c874ce22e4.PNG)  
 
+## Constraints on Relations
+- Referential Constraints
+  - One-way association Student ==> Department가 있다.
+  - Student(name, ID, dept, score), Department(name, college, office) 라고 하면
+    - Projection.dept(Student)는 Projection.name(Department)의 부분집합이어야 한다.
+    - 또는, Projection.dept(Student) - Projection.name(Department) = 공집합이 되어야 한다.
+    - 즉, Student Class에서 가진 Department 이름은 Foreign Key가 될 것인데, 이게 Department Class에 없는 이름이면 안된다!
+- Key Constraint
+  - 최소 1개의 Attribute나 Attiribute 조합을 Tuple로 만들어 Primary Key로 정한다.
+  - Example
+    - Student(name, ID, Dept, Score)
+    - 이 때 ID가 Key Attribute라면?
+    - Select(Stud1.ID = Stud2.ID AND Stud1.dept != Stud2.dept)(Stud1 X Stud2) = 공집합  
+                                                      WHERE Rename(Student=>Stud1) AND Rename(Student => stud2)  
+    - Why?) 다른 부서에 같은 ID를 가진 사람이 존재하면 유일하지 않으므로 Key Attribute가 될 수 없다.
+
+## From UML to Relation Model
+- Class to Relational Schema : Class를 SQL 같은 Schema로 표현하는 과정이다.  
+![qwd](https://user-images.githubusercontent.com/71700079/138444584-31ab09e3-de47-433d-890e-e1ada784d55c.PNG)  
+- Association to Relational Schema : Association을 Schema로 표현하는 과정.  
+  - One-way Association  
+    ![qwd](https://user-images.githubusercontent.com/71700079/138444785-0934b36b-d0ff-4389-b8a7-e24e96cd99cc.PNG)  
+    - 위의 사진을 보면 Company Class의 PK(name, address)가 Person의 TABLE로 들어오는 것을 알 수 있다.
+    - 이를 우리는 Foreign Key(외래 키)라고 한다. 관계가 있는 Class의 PK를 참조하는 것이다.
+    - 이 때 상위클래스의 Cardinality가 1..1이 아니면, Foreign키 하나가 아닌 Key Set이 되어야 할 것이다. 
+    - 하지만 RDM은 이를 지원하지 않는다. 따라서 우리는 JOIN 연산을 이용해서 PK를 유일하게 만들어 주어야 한다.
+  - Two-way Association  
+    ![qwd](https://user-images.githubusercontent.com/71700079/138444889-b8a7b793-2392-4982-bc7b-015e47938453.PNG)  
+    - Player Class와 Team Class에서 각각 PK를 하나씩 떼와서 JOIN하여 PK로 쓰고 있다. 이는 유일한 Key가 맞다.  
+- Aggregation to Relational Schema : Aggregation 구조를 Schema로 표현하는 과정
+  ![qws](https://user-images.githubusercontent.com/71700079/138445833-a8e4cbe9-ec5c-49bd-a41a-f538edb1655d.PNG)  
+  - One-way든 Two-way든 모두 동일하게 위와 같이 표현한다.
+  - Department 내에 County라는 조직이 속해있는 것이므로,
+- Inheritance(Generalization) to Relational Schema  
+  ![qwd](https://user-images.githubusercontent.com/71700079/138446340-ea70096b-4f76-46c2-b4ce-f9d423e044d0.PNG)  
+  - Inheritance는 Sub Class가 Super Class의 Attributes를 그대로 상속 받음을 의미한다.
+  - 따라서 Super Class의 Attributes를 그대로 적어 넣어준다.
+  - 상속 받았으므로 PRIMARY KEY와 Key가 둘 다 존재할 수 밖에 없다.
+- Weak Entity Set
+  ![qwd](https://user-images.githubusercontent.com/71700079/138446841-8b65d399-3419-4581-8386-c96ef32f91fc.PNG)  
+  - Weak Entity Set은 앞서 설명했듯이, Key를 혼자서는 만들지 못해서 Whole Class의 Attribute를 빌려다가 쓰는 것이다.
+  - 따라서 Player의 TABLE에 ```teamName``` 또한 선언을 해주고, ```Primary Key(backNumber, teamName)```과 같이 선언한다.
+
+
+
+
 
 
 
