--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -25,13 +25,15 @@
   - 하지만 Bag에서의 Union(합집합) 연산은 중복을 허락하기 때문에, Idempotent가 없다. (e.g.  B UNION B = {B, B})
 
 ### Extended Algebra
-- Delta : Bags에서 Duplications를 제거한다. 이 연산자는 Grouping에 속하며, 특수한 Grouping이라고 볼 수 있다.
+- Delta : Bags에서 Duplications를 제거한다. 이 연산자는 Grouping에 속하며, 특수한 Grouping이라고 볼 수 있다.(Generalized Projection)
 - Tow(L) : L자리의 Column을 정렬한다. ==> Sorting의 결과는 List로 나온다.(Why? Set과 Bag은 순서가 없다.) ==> Final Step 연산!
   - L이 하나의 Column 일 때 : 그냥 정렬한다. 같은 값이 있다면 임의배치.
   - L의 다수의 Column 일 때 : 앞의 Column으로 먼저 정렬을 한 뒤, 같은 값이 있다면 2순위의 Column 순서에 맞게 정렬한다.
 - Extended Projection : 원래의 Projection과 유사하지만, Attribute list L에 특성 연산이나 요소들을 기재하여 좀 더 구체적인 추출이 가능하다.
   - X => Y 표현 : x와 y는 둘 다 Column Name, X의 이름을 Y로 Renaming한다. 결과 Schema에도 Y로 표기된다.
-  - E => z 표현, E는 Expression(Column, 상수, 산수, 연산자) z는 E의 연산 결과를 저장하는 Column의 이름이다.
+  - E => z 표현, E는 Expression(Column, 상수, 산수, 연산자) z는 E의 연산 결과를 저장하는 Column의 이름이다.  
+  ![Exte](https://user-images.githubusercontent.com/71700079/138449186-c2497f5d-5fb1-4e05-be8b-02461bb9b356.jpg)  
+  
 - Gamma : Grouping and Aggregation
   - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 열들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
