Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -32,7 +32,7 @@
 - Extended Projection : 원래의 Projection과 유사하지만, Attribute list L에 특성 연산이나 요소들을 기재하여 좀 더 구체적인 추출이 가능하다.
   - X => Y 표현 : x와 y는 둘 다 Column Name, X의 이름을 Y로 Renaming한다. 결과 Schema에도 Y로 표기된다.
   - E => z 표현, E는 Expression(Column, 상수, 산수, 연산자) z는 E의 연산 결과를 저장하는 Column의 이름이다.  
-  ![Exte](https://user-images.githubusercontent.com/71700079/138449186-c2497f5d-5fb1-4e05-be8b-02461bb9b356.jpg)  
+  ![group](https://user-images.githubusercontent.com/71700079/138451018-81218d04-70fa-4c47-acfe-493b9d7bc5d8.jpg)  
   
 - Gamma : Grouping and Aggregation
   - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 열들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
