Update 3.More Relational Operations.md

--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -32,18 +32,15 @@
 - Extended Projection : 원래의 Projection과 유사하지만, Attribute list L에 특성 연산이나 요소들을 기재하여 좀 더 구체적인 추출이 가능하다.
   - X => Y 표현 : x와 y는 둘 다 Column Name, X의 이름을 Y로 Renaming한다. 결과 Schema에도 Y로 표기된다.
   - E => z 표현, E는 Expression(Column, 상수, 산수, 연산자) z는 E의 연산 결과를 저장하는 Column의 이름이다.  
-  ![group](https://user-images.githubusercontent.com/71700079/138451018-81218d04-70fa-4c47-acfe-493b9d7bc5d8.jpg)  
-  
+  ![Exte](https://user-images.githubusercontent.com/71700079/138451307-9eac4235-bfbf-4537-82bc-cc6acab0d134.jpg)  
+
 - Gamma : Grouping and Aggregation
   - Aggregation : Relational Algebra의 Operator은 아니지만, 특정 열들에 대한 연산 결과를 반환해준다.(e.g. SUM, AVG, COUNT, MIN, and MAX)
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
-    - 쉽게 말해 공통점을 Constraints로 걸어서 새로운 Grou으로 만드는 연산자.
+    - 쉽게 말해 공통점을 Constraints로 걸어서 새로운 Group으로 만드는 연산자.
     - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
     - Example : StarsIn(title, year, starName)
-      - R1 := Gamma(starName, MIN(year) => minYear, Count(title) => ctTitle)(StarsIn)  
-      - R2 := SELCT ctTitle >= 3(R1)
-      - R3 := PROJECT minYear(R2)  
-      ![qwd](https://user-images.githubusercontent.com/71700079/138421093-6ce66357-9532-4198-979a-38a538116525.PNG)
+      ![group](https://user-images.githubusercontent.com/71700079/138451018-81218d04-70fa-4c47-acfe-493b9d7bc5d8.jpg)  
 
 - OUTERJOIN : 아래와 같이 __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.  
 
