--- a/3.More Relational Operations.md
+++ b/3.More Relational Operations.md
@@ -39,7 +39,7 @@
   - Grouping : ![캡처](https://user-images.githubusercontent.com/71700079/138420418-f1794124-3c0c-4c24-b30b-b6450b7f8593.PNG)  
     - 쉽게 말해 공통점을 Constraints로 걸어서 새로운 Group으로 만드는 연산자.
     - L은 List의 Individual 한 Attributes나 AGG(Attribute)(Aggregation Operation)된 원소가 된다.
-    - Example : StarsIn(title, year, starName)
+    - Example : Movies(Studio, Title, Year, Length, Genre)
       ![group](https://user-images.githubusercontent.com/71700079/138451018-81218d04-70fa-4c47-acfe-493b9d7bc5d8.jpg)  
 
 - OUTERJOIN : 아래와 같이 __Dangling Tuples__ 를 발생시키지 않기 위해서, 빈 공간에 Padding을 시킨다.  
