--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -1,4 +1,19 @@
 # Design Theory for Relational Database
 ---
 ## Properties of Table
+- Table is set of relations.
+- Relations can be derived from UML diagram.
+- 하지만, 모든 Relation이 정확한 것은 아니다!
+  - 우리는 다음과 같은 항목들을 주의해야 한다.
+    - FD(Functional Dependancy)
+    - Key
+    - Decomposition of Table
 ## Functional Dependancy
+- FD(Functional Dependancy)? : 어떤 Attribute의 값이 결정되면, 다른 Attribute의 값이 자동으로 결정되는 것을 말한다.
+  - Example Stud(name, ID, GPA)에서 PK(ID)는 Name과 GPA를 __Functionally Determine__ 한다.
+  - Example : Movie(title(PK), year(PK), length, filmType, studioName, starName)
+    - title, year => length (FD? True.)
+    - title, year => filmType (FD? True.)
+    - title, year => studioName (FD? True.)
+    - title, year => length filmType studioName (위의 3개가 다 Determine 되므로 이것도 맞다.)
+    - title, year => starName ? (이 경우에는 title과 year이 Determine하지 못한다. Why? 한 배우가 여러 작품을 할 수 있기 때문이다.)
