--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -17,3 +17,17 @@
     - title, year => studioName (FD? True.)
     - title, year => length filmType studioName (위의 3개가 다 Determine 되므로 이것도 맞다.)
     - title, year => starName ? (이 경우에는 title과 year이 Determine하지 못한다. Why? 한 배우가 여러 작품을 할 수 있기 때문이다.)
+
+### How to determine Key?
+
+### Rules About FD
+- Functional Dependancy
+- Transitive Rule
+- Splitting/Combining Rule
+- Trivial Dependancy Rule
+
+### Armstrong's Axioms
+
+### Closure of Attribute
+### Algorithm to find closure
+### Closure and Key
