--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -31,4 +31,13 @@
 ### Closure of Attribute
 ### Algorithm to find closure
 ### Closure and Key 
-## Normal F
+### Closing Set of Functional Dependancies
+
+## Bad Design : Anomalies
+### Decomposing
+### Lossless Decomposing
+## Normal Form (Condition for good Relation)
+### 1st NF
+### 2nd NF
+### 3rd NF
+### Boyce-Codd Normal Form(BCNF)
