--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -19,23 +19,85 @@
     - title, year => starName ? (이 경우에는 title과 year이 Determine하지 못한다. Why? 한 배우가 여러 작품을 할 수 있기 때문이다.)
 
 ### How to determine Key?
+- Key라 함은, 그 결정된 Key와 다른 모든 Attributes가 __Functional Dependancy__ 를 가짐을 의미한다.
+  - Key가 결정되면 다른 모든 Attributes 또한 결정된다!
+- Primary Key : Key 중에서 가장 많이 사용되는 주 키.
+- Super Key : Key를 포함하는 Attributes set을 말한다. Super Key는 Minimal하지 않아도 된다.
+  - Super Key에서 필요없는 Attributes를 지우면 진짜 Key가 된다.
 
 ### Rules About FD
-- Functional Dependancy
-- Transitive Rule
-- Splitting/Combining Rule
+- Functional Dependancy : Relation의 매우 중요한 특성이다.
+- Transitive Rule : A => B and B => C then A => C (Transitive)
+- Splitting/Combining Rule 
+  - A1A2A3...An => B1(Spliting)
+  - A1A2A3...An => B2 ..
+  - <==> A1A2A3...An => B1B2...Bk (Combining)
+  - 가능한 오른쪽 항은 하나만 있는 것이 좋다!
 - Trivial Dependancy Rule
+  - A1A2A3..An => B 일 때, B가 {A1A2A3..An} 중 하나이면, 이는 Trivial 하다고 한다!
+    - ex) name, phone => major(FD) / name, phone => phone(Trivial FD)
+  - 반대로 B가 A집합 내에 없으면 Completely non-trivial 이라고 한다.
 
 ### Armstrong's Axioms
+- Reflexivity(Trivial FD)
+  - If {C1C2..Ck} is Subset of {B1B2...Bm}, then B1B2..Bm => C1C2...Ck, It's Trivial!
+- Augmentation
+  - If A1A2..An => B1B2..Bm, then A1A2...AnC1C2..Ck => B1B2..BmC1C2...Ck
+  - Like Left Cancelation.
+- Transivity
+  - A1A2..An => B1B2..Bm and B1B2..Bm => C1C2..Ck
+  - A1A2..An => C1C2..Ck
 
 ### Closure of Attribute
-### Algorithm to find closure
-### Closure and Key 
-### Closing Set of Functional Dependancies
+- Closure : {A1, A2, .., An}+(Superscript)
+  - {A1A2..An} is a set of attributes and S is a set of FD
 
-## Bad Design : Anomalies
-### Decomposing
+### Algorithm to find closure
+- Input : {A1,A2,...,An} and set S of FDs
+- Output : {A1,A2,...,An}+ (Closure)
+- Process ( example : {A, B, C, D, E} | S : AB=>C, BC=>AD, D=>E )
+  1. 오른쪽 항에 하나의 속성만 남도록 FD를 Split한다.(e.g. BC => AD ==> A and D)
+  2. initialize X = {A, B}+
+  3. Search for some FD
+    - ex) AB => C ==> X{A, B, C} (B는 X 내에 있지만, C는 X 내에 없는 경우)
+    - rep) BC => D ==> X{A, B, C, D}
+    - rep) D => E ==> X{A, B, C, D, E}
+  4. Relation X에 더 이상 추가할 속성이 없을 때 까지 3번을 반복한다.
+  5. 즉 {A, B}+ = {A, B, C, D, E}가 되므로, A와 B만 있으면 C, D, E가 결정된다는 의미이다.
+
+### Closure and Key 
+> Key의 정의가 무엇이었는가?  
+> Key는 다른 모든 Attributes를 Determine 할 수 있는 Attribute였다.  
+> 즉 다른 모든 Not key attributes와 Functional Dependancy를 갖는 속성이라는 말이다.  
+> 뭔가 생각나지 않는가? 바로 이전 주제였던 Closure과 동일한 의미이다!  
+- 위의 예시였던 Closuer {A, B}+는 C, D, E를 결정할 수 있으므로 Key는 맞으나
+  - Minimal 한지 알 수 없으므로, 아직은 Super Key이다. 
+  - {A, B}에서 B를 지워버리면 A 하나로는 A, B, C, D, E를 모두 만들 수 없으므로 이는 Key이다!
+
+### Closing Set of Functional Dependancies
+- ex) S = A=>B, A=>C, B=>A, B=>C, C=>A, C=>B 일 때, S의 Minimal Basis는 무엇인가?
+  - A=>B, B=>C, C=>A만 있으면 모든 FD를 만들어 낼 수 있다. 따라서 이게 Minimal Basis!
+
+## Bad Design : Anomalies  
+![okdong](https://user-images.githubusercontent.com/71700079/139278083-09768118-d3bf-4f01-b878-838a5aa1133b.jpg)  
+- 붉은 상자로 표시된 부분은 모두 중복되어 있으므로, 이는 바람직하지 못하다!
+- Redundancy : 중복되는 부분들.
+- Update Anomaly : 고쳐야 할 부분이 있는데, 모두 고치지 않고 한 부분만 고쳐버려서 Table Consistency가 깨지는 경우.
+- Deletion Anomaly : 위의 Table을 예시로 보면 1980년도 Star wars에 Billy가 출연하지 않아서 수정하려고 했는데, 행을 통째로 지워버려서 날아가버리는 경우.
+
+### Decomposing  
+![decom](https://user-images.githubusercontent.com/71700079/139278944-ed5318a0-c95b-4d6c-9853-1f2d1f892e4f.jpg)  
+- 위의 문제들을 해결하기 위해 우리는 __Decomposing__ 을 한다!
+- 위와 같이 Decomposing하면, Duplication, Update Anomaly, Deletion Anomaly 없이 모두 해결이 가능하다!
+
 ### Lossless Decomposing
+- Lossless Decomposition
+  - {A1A2..An} => {B1B2..Bm}, {C1C2..Ck} 일 때
+  - {B1B2..Bm} U {C1C2..Ck} = {A1A2...An}
+  - {B1B2..Bm} 교 {C1C2...Ck} != 공집합 and R = R1 Join R2.
+- 후에 Decompose한 R1과 R2를 Join해야 하므로, 공통부분은 놔두고 Decomposing을 해야한다. ==> 이를 Lossless라고 한다!  
+![화면 캡처 2021-10-28 234509](https://user-images.githubusercontent.com/71700079/139280016-01b6febd-5a47-46ce-bf9b-00d167af4c83.jpg)  
+
 ## Normal Form (Condition for good Relation)
 ### 1st NF
 ### 2nd NF
