--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -96,10 +96,35 @@
   - {B1B2..Bm} U {C1C2..Ck} = {A1A2...An}
   - {B1B2..Bm} 교 {C1C2...Ck} != 공집합 and R = R1 Join R2.
 - 후에 Decompose한 R1과 R2를 Join해야 하므로, 공통부분은 놔두고 Decomposing을 해야한다. ==> 이를 Lossless라고 한다!  
+- Lossless Decomposition's Bad Example  
 ![화면 캡처 2021-10-28 234509](https://user-images.githubusercontent.com/71700079/139280016-01b6febd-5a47-46ce-bf9b-00d167af4c83.jpg)  
 
 ## Normal Form (Condition for good Relation)
+> 정규화, Good Relation이 되기 위한 조건!  
+
 ### 1st NF
+- Table 내의 모든 구성요소는 __Atomic__ 해야 한다!
+  - 이는 곧 Table 내의 모든 Attribute 값이, Table이나 Set, List와 같은 다차원 값을 가지면 안된다는 말이다.
+    - ex) Movie(Title, Year, Length, {Starname})
+    - Star Wars, 1977, 124, {H.Ford, Link, Box..}
+    - 위와 같은 경우는 1st NF를 만족하지 못한다. 이렇게 되면 Relation의 Algebra가 모두 깨져버린다!
+
 ### 2nd NF
+- 1st NF를 만족하며,
+- Key 전체가 __Non-prime Attribute__ 와 FD인 것이 아닌, Key의 일부가 Partial FD를 갖는 경우는 2NF가 안된다!
+  - __Non-prime Attribute__ 는 Key에 포함되어있지 않은 나머지 Attributes를 말한다.
+    - ex) Team(Team, BackNumber, TeamAddr, Name, Position)
+    - Team ==> TeamAddr
+    - Team, BackNumber ==> Name, Position
+    - 여기서 PK(Team, BackNumber)이므로, Team 혼자서 TeamAddr를 만드는 경우는 2NF에서 용납할 수 없다!
+    - 이를 해결하려면? 또 __Decompose__ 를 한다! ==> R1(Team, Number, Name, Position), R2(Team, TeamAddr)
+
 ### 3rd NF
+- 당연히 2nd NF를 만족하며,
+- Transitive한 FD가 존재해서는 안된다!
+  - ex) Team(TeamName, Address, ManagerID, ManagerHireDate)
+    - PK(TeamName)
+    - TeamName => ManagerID => ManagerHireDate
+    - 2NF는 맞지만, 3NF는 안된다! why?) Transitive가 존재한다.  
+ 
 ### Boyce-Codd Normal Form(BCNF)
