--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -81,14 +81,14 @@
 ## Bad Design : Anomalies  
 ![okdong](https://user-images.githubusercontent.com/71700079/139278083-09768118-d3bf-4f01-b878-838a5aa1133b.jpg)  
 - 붉은 상자로 표시된 부분은 모두 중복되어 있으므로, 이는 바람직하지 못하다!
-- Redundancy : 중복되는 부분들.
-- Update Anomaly : 고쳐야 할 부분이 있는데, 모두 고치지 않고 한 부분만 고쳐버려서 Table Consistency가 깨지는 경우.
-- Deletion Anomaly : 위의 Table을 예시로 보면 1980년도 Star wars에 Billy가 출연하지 않아서 수정하려고 했는데, 행을 통째로 지워버려서 날아가버리는 경우.
+- Redundancy(삽입 이상) : 중복되는 부분들.
+- Update Anomaly(갱신 이상) : 고쳐야 할 부분이 있는데, 모두 고치지 않고 한 부분만 고쳐버려서 Table Consistency가 깨지는 경우.
+- Deletion Anomaly(삭제 이상) : 위의 Table을 예시로 보면 1980년도 Star wars에 Billy가 출연하지 않아서 수정하려고 했는데, 행을 통째로 지워버려서 날아가버리는 경우.
 
 ### Decomposing  
 ![decom](https://user-images.githubusercontent.com/71700079/139278944-ed5318a0-c95b-4d6c-9853-1f2d1f892e4f.jpg)  
 - 위의 문제들을 해결하기 위해 우리는 __Decomposing__ 을 한다!
-- 위와 같이 Decomposing하면, Duplication, Update Anomaly, Deletion Anomaly 없이 모두 해결이 가능하다!
+- 위와 같이 Decomposing하면, Insertion Anomaly, Update Anomaly, Deletion Anomaly 없이 모두 해결이 가능하다!
 
 ### Lossless Decomposing
 - Lossless Decomposition
@@ -111,7 +111,7 @@
 
 ### 2nd NF
 - 1st NF를 만족하며,
-- Key 전체가 __Non-prime Attribute__ 와 FD인 것이 아닌, Key의 일부가 Partial FD를 갖는 경우는 2NF가 안된다!
+- Key 전체가 __Non-prime Attribute__ 와 FD(완전 함수적 종속)인 것이 아닌, Key의 일부가 Partial FD(부분 함수적 종속성)를 갖는 경우는 2NF가 안된다!
   - __Non-prime Attribute__ 는 Key에 포함되어있지 않은 나머지 Attributes를 말한다.
     - ex) Team(Team, BackNumber, TeamAddr, Name, Position)
     - Team ==> TeamAddr
@@ -128,3 +128,11 @@
     - 2NF는 맞지만, 3NF는 안된다! why?) Transitive가 존재한다.  
  
 ### Boyce-Codd Normal Form(BCNF)
+- 당연히 3rd NF를 만족하며,
+- X => Y 의 FD 관계가 Trivial하거나, 아니라면 X가 Superkey여야만 한다.
+  - ex) Movie(title, year, length, genre, studioName, starName)
+    - F1 : title year ==> length genre studioName
+    - (title year starName) is superkey, (title year) is key(not superkey).
+    - 따라서 관계 F1은 BCNF의 조건을 위반한다.
+    - 이를 해결하기 위해서는? 당연히 Decomposition이 필요하다!
+      - Movie(title, year, length, genre) Movie-star(title, year, starName)
