--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -136,3 +136,11 @@
     - 따라서 관계 F1은 BCNF의 조건을 위반한다.
     - 이를 해결하기 위해서는? 당연히 Decomposition이 필요하다!
       - Movie(title, year, length, genre) Movie-star(title, year, starName)
+
+### BCNF Decomposition Algorithm
+- Input : R0, set S0(FDs)
+- Output : R1, R2, .. , Rn such that R0 = R1 join R2 join .. join Rn
+- Process
+  1. R0이 BCNF에 위배되지 않는가? ==> R0을 그대로 Return한다.
+  2. 위배된다면, R1과 R2로 먼저 Decomposition을 한다.
+  3. 
