--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -142,5 +142,13 @@
 - Output : R1, R2, .. , Rn such that R0 = R1 join R2 join .. join Rn
 - Process
   1. R0이 BCNF에 위배되지 않는가? ==> R0을 그대로 Return한다.
-  2. 위배된다면, R1과 R2로 먼저 Decomposition을 한다.
-  3. 
+  2. 위배된다면, 위배되지 않도록 FD set S0을 S1과 S2로 Decompose 시켜야 한다.
+  3. BCNF에 완전히 위배되지 않을 때 까지 위의 과정 반복.
+- Example
+  - Team(TeamName, Address, ManagerID, ManagerHireDate)
+  - FD
+    - TeamName => Address, TeamName => ManagerID
+    - ManagerID => ManagerHireDate
+    - 이는 ManagerID => ManagerHireDate에 의해 BCNF를 위반한다.
+    - 따라서 R1(TeamName, Address, ManagerID)와 R2(ManagerID, ManagerHireDate)로 Decomposite을 해야한다.
+    - 이 때 Lossless Decomposition을 위해 양쪽 Relation에 공통 속성을 두는데, 이를 __Pivot Attribute__ 라고 한다.(여기선 ManagerID)
