--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -81,7 +81,7 @@
 ## Bad Design : Anomalies  
 ![okdong](https://user-images.githubusercontent.com/71700079/139278083-09768118-d3bf-4f01-b878-838a5aa1133b.jpg)  
 - 붉은 상자로 표시된 부분은 모두 중복되어 있으므로, 이는 바람직하지 못하다!
-- Redundancy(삽입 이상) : 중복되는 부분들.
+- Insertion Anomaly(삽입 이상) : Null Table의 삽입은 불가능하다.
 - Update Anomaly(갱신 이상) : 고쳐야 할 부분이 있는데, 모두 고치지 않고 한 부분만 고쳐버려서 Table Consistency가 깨지는 경우.
 - Deletion Anomaly(삭제 이상) : 위의 Table을 예시로 보면 1980년도 Star wars에 Billy가 출연하지 않아서 수정하려고 했는데, 행을 통째로 지워버려서 날아가버리는 경우.
 
